--- a/sandbox/Cargo.toml
+++ b/sandbox/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.70"
+color-eyre = "0.6.2"
 renderer = { version = "0.1.0", path = "../renderer" }
+thiserror = "1.0.40"
