--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+env_logger = "0.10.0"
+log = "0.4.17"
 thiserror = "1.0.40"
+wgpu = "0.15.1"
+winit = "0.28.3"
