--- a/sandbox/Cargo.toml
+++ b/sandbox/Cargo.toml
@@ -10,5 +10,5 @@ anyhow = "1.0.70"
 color-eyre = "0.6.2"
 env_logger = "0.10.0"
 log = "0.4.17"
-renderer = { version = "0.1.0", path = "../renderer" }
+render_engine = { version = "0.1.0", path = "../render_engine" }
 thiserror = "1.0.40"
