--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,7 @@
-[package]
-name = "phanes"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.70"
-ecs = { version = "0.1.0", path = "ecs" }
-renderer = { version = "0.1.0", path = "renderer" }
-thiserror = "1.0.40"
-
 [workspace]
 members = [
-    ".",
-    "renderer",
-    "ecs",
+    "phanes_core",
+    "phanes_builtin",
+    "phanes_renderer",
+    "phanes_scripting",
 ]
