--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
-[workspace]
-members = [
-    "phanes_core",
-    "phanes_builtin",
-    "phanes_renderer",
-    "phanes_scripting",
-]
+[package]
+name = "phanes"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
