--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.70"
 color-eyre = "0.6.2"
 env_logger = "0.10.0"
 log = "0.4.17"
+pollster = "0.3.0"
 thiserror = "1.0.40"
 wgpu = "0.15.1"
 winit = "0.28.3"
