--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+bytemuck = { version = "1.13.1", features = ["derive"] }
 color-eyre = "0.6.2"
 env_logger = "0.10.0"
 log = "0.4.17"
