--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ target/
 # already existing elements were commented out
 
 #/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
